Bug 96392 - FORMATTING: Hanging punctuation covered by table border
Summary: FORMATTING: Hanging punctuation covered by table border
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-10 17:46 UTC by Mark Hung
Modified: 2016-10-25 19:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample paragraph covered by table border (11.95 KB, application/vnd.oasis.opendocument.text)
2015-12-10 17:46 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2015-12-10 17:46:15 UTC
Created attachment 121206 [details]
Sample paragraph covered by table border

1. Insert a table, enter some text and end with Chinese punctuations in one line. 
2. Enable hanging punctuation of the paragraph.
3. Adjust rightmost table border until it just cover the punctuation.

It should not be covered by table border.
Comment 1 Buovjaga 2015-12-14 14:51:50 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 917d59a84124d1022bd1912874e7a53c674784f1
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-12_12:17:04
Locale: fi-FI (fi_FI)
Comment 2 Commit Notification 2016-02-13 08:06:44 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3596613153289dae204b5abdc7446b303021f597

tdf#96392 disallow hanging punctuation if the frame is inside a table.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Timur 2016-03-14 14:49:20 UTC
I guess it's fixed.