tdf#96392 disallow hanging punctuation if the frame is inside a table.

Change-Id: Ib9d8386b47f8fa7b8afabb94f94085c7fb2fc0bb